fix(paper): Add all missing bibliography entries to external references.bib
CRITICAL FIX: The external references.bib file is actually used (not inline).

Added missing entries to prompt_paper/references.bib:
- brown2001interval (Wilson score intervals)
- mcnemar1947note (McNemar test)
- kunsch1989jackknife (Block bootstrap)
- landis1977measurement (Inter-rater reliability κ)
- cohen1988statistical (Effect sizes)
- efron1994bootstrap (Bootstrap)
- reimers2019sentencebert (Sentence embeddings)

Also fixed text overflow in .tex:
- Line 427: Shortened audit artifacts description
- Line 597: Optimized repair transformations text

Now all citations should resolve correctly!

--- a/prompt_paper/references.bib
+++ b/prompt_paper/references.bib
@@ -218,5 +218,74 @@
   volume={76},
   number={5},
   pages={378--382},
-  year={1971}
+  year={1971},
+  publisher={American Psychological Association}
+}
+
+@article{brown2001interval,
+  title={Interval Estimation for a Binomial Proportion},
+  author={Brown, Lawrence D and Cai, T Tony and DasGupta, Anirban},
+  journal={Statistical Science},
+  volume={16},
+  number={2},
+  pages={101--133},
+  year={2001},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{mcnemar1947note,
+  title={Note on the sampling error of the difference between correlated proportions or percentages},
+  author={McNemar, Quinn},
+  journal={Psychometrika},
+  volume={12},
+  number={2},
+  pages={153--157},
+  year={1947},
+  publisher={Springer}
+}
+
+@article{kunsch1989jackknife,
+  title={The jackknife and the bootstrap for general stationary observations},
+  author={K{\"u}nsch, Hans R},
+  journal={Annals of Statistics},
+  volume={17},
+  number={3},
+  pages={1217--1241},
+  year={1989},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{landis1977measurement,
+  title={The measurement of observer agreement for categorical data},
+  author={Landis, J. Richard and Koch, Gary G.},
+  journal={Biometrics},
+  volume={33},
+  number={1},
+  pages={159--174},
+  year={1977},
+  publisher={Wiley}
+}
+
+@book{cohen1988statistical,
+  title={Statistical Power Analysis for the Behavioral Sciences},
+  author={Cohen, Jacob},
+  edition={2nd},
+  year={1988},
+  publisher={Lawrence Erlbaum Associates}
+}
+
+@book{efron1994bootstrap,
+  title={An Introduction to the Bootstrap},
+  author={Efron, Bradley and Tibshirani, Robert J},
+  year={1994},
+  publisher={Chapman and Hall/CRC},
+  address={New York}
+}
+
+@inproceedings{reimers2019sentencebert,
+  title={Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks},
+  author={Reimers, Nils and Gurevych, Iryna},
+  booktitle={Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing},
+  year={2019},
+  pages={3982--3992}
 }
